Promjena hedera na naslovnoj strani

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
       <section id="hero">
         <div id="hero-content">
-          <h1>KlariksMAX inovativni projekat</h1>
+          <h1>KlariksMAX <br/> inovativni projekat</h1>
           <p>InovARTech</p>
           <a href="second.html">Detalji</a>
         </div>
