--- a/second.html
+++ b/second.html
@@ -104,7 +104,7 @@
 
                 Unutar letjelice, posjetioci će doživjeti
                 magično iskustvo zahvaljujući VR naočarima. Otvoriće prozor u prošlost, omogućujući im da posmatraju svoj omiljeni 
-                hobi kako je izgledao u davnim vremenima, razgovarajući s entuzijastima tog doba te se čak oprobavajuci u starim 
+                hobi kako je izgledao u davnim vremenima, razgovarajući s entuzijastima tog doba te cak da se oprobaju u starim 
                 verzijama tog hobija. Ova udubljenost u prošlost ne samo da će im pružiti nezaboravno iskustvo, već će im takođe omogućiti 
                 da naslute kako će tehnološki napredak oblikovati budućnost njihovog voljenog hobija, takodje uz pomoc VR naočara.
               </div>
