--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav>
         <ul>
           <li>
-            <a id="otom" href="second.html">O tome</a>
+            <a id="otom" href="second.html">O projektu</a>
           </li>
         </ul>
       </nav>
