Ispravljene greske u kucanju.

--- a/second.html
+++ b/second.html
@@ -71,12 +71,12 @@
         <li class="nav-item">
           <button class="nav-link" href="#" onclick="showText('text2')">Istrazivanje</button>
           <div id="text2" class="hidden-text">
-            Razgovarajući sa umjetnicima, Nadom Kažić, medjunarodnim sudijom Srdjanom Kadicem, i stručnjacima iz područja robotike, 
-            posjetom radiju klub Podgorica, te posjetom labaratorije za robotiku Prirodno-matematičkog fakulteta, labaratorije za mehatroniku Masinskog falkuteta, otkrili
-            smo duboku promjenu u karakteru tehnologije koja je postala veoma intenzivna i snažno
+            Razgovarajući sa umjetnicima, Nadom Kažić, međunarodnim sudijom Srđanom Kadićem, i stručnjacima iz područja robotike,
+            posjetom Radio klubu Podgorica, te posjetom laboratoriji za robotiku Prirodno-matematičkog fakulteta, laboratoriji za mehatroniku Mašinskog falkuteta, otkrili
+            smo duboku promjenu u karakteru tehnologije, koja je postala veoma intenzivna i snažno
             automatizovana. No, istovremeno smo primijetili 
             kako se umjetnost, kao reakcija na ove promjene, ponekad doživljava kao nedruštvena.
-            Pažljivo slušajući njihove riječi, postalo nam je jasno da postoje pokušaji da se vizualna 
+            Pažljivo slušajući njihove riječi, postalo nam je jasno da postoje pokušaji da se vizuelna 
             umjetnost poveže s tehnologijom, što je zaista impresivno. Ali, one su sve kratkog daha, ostavljajući 
             utisak da je povezivanje umjetnosti i tehnologije još uvijek u fazi kratkotrajnih eksperimenata.
             </div>
@@ -88,7 +88,7 @@
             <div id="text1" class="hidden-text">
                 Analizirajući sve navedene razgovore, primijetili smo niz izazova koji proizilaze iz različitih pravaca,
                 uključujući nedostatak motivacije, inkluzivnosti, nerazvijenost fine motorike, nedostatak
-                informisanosti te izazove vezane za razvoj originalnog mišljenja. U želji da indetifikujemo glavni
+                informisanosti te izazove vezane za razvoj originalnog mišljenja. U želji da identifikujemo glavni
                 problem koji bi obuhvatio sve ove aspekte, odlučili smo se za nedostatak interesa kao centralni izazov.
               </div>
           </div>
